CMS7-8547: prevent shifting of list items below a document with a name longer than 2 lines

--- a/cms/api/src/main/styling/less/_doclist.less
+++ b/cms/api/src/main/styling/less/_doclist.less
@@ -196,7 +196,7 @@
         // out of their box (e.g. for stacked document state icons)
         display: block;
         overflow: hidden;
-        max-height: ceil(2.1 * @line-height-computed);
+        max-height: 2 * @line-height-computed;
       }
 
       .link {
